branches/zip: ChangeLog: Mention Bug #27276. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:2923 testament3-sha1: 0e1e76dcb146601595348af2d4d992c7945b25a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@
 	exist, because the insert buffer record may have been discarded by
 	some other thread. This bug has existed in MySQL/InnoDB since
 	version 4.1, when innodb_file_per_table was implemented.
+	This may fix Bug#27276 InnoDB Error: ibuf cursor restoration fails.
 
 2008-10-22	The InnoDB Team
 
