branches/zip: Introduce UNIV_AHI_DEBUG for debugging the adaptive hash index without enabling UNIV_DEBUG.
--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:3572
testament3-sha1: 4d5e775be56870428e605c4b9009bea2cf2bb269

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-12-17	The InnoDB Team
+
+	* include/univ.i, include/buf0buf.h, include/hash0hash.h,
+	include/ha0ha.h, include/ha0ha.ic, ha/ha0ha.c, ha/hash0hash.c,
+	btr/btr0sea.c, buf/buf0lru.c, buf/buf0buf.c:
+	Introduce the preprocessor symbol UNIV_AHI_DEBUG for enabling
+	adaptive hash index debugging independently of UNIV_DEBUG.
+
 2008-12-02	The InnoDB Team
 
 	* row/row0merge.c:
