branches/zip: Remove update-in-place-in-select from the internal SQL interpreter.  It was only used for updating the InnoDB internal data dictionary when renaming or dropping tables.  It could have caused deadlocks after acquiring latches on insert buffer bitmap pages. This and r3544 should fix Issue #135.
Furthermore, the update-in-place-in-select does not account for
compression failure.  That was not a problem yet, since the InnoDB SQL
interpreter has so far assumed ROW_FORMAT=REDUNDANT.

rb://63 approved by Heikki Tuuri

--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:3575
testament3-sha1: b453b5b2cfd2bf97f461f0ce507c83b9f2b09772

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-12-17	The InnoDB Team
 
+	* include/row0upd.h, include/row0sel.h, pars/pars0pars.c,
+	row/row0upd.c, row/row0sel.c, row/row0mysql.c:
+	Remove update-in-place select from the internal SQL interpreter.
+	It was only used for updating the InnoDB internal data dictionary
+	when renaming or dropping tables.  It could have caused deadlocks
+	when acquiring latches on insert buffer bitmap pages.
+
+2008-12-17	The InnoDB Team
+
 	* include/univ.i, include/buf0buf.h, include/hash0hash.h,
 	include/ha0ha.h, include/ha0ha.ic, ha/ha0ha.c, ha/hash0hash.c,
 	btr/btr0sea.c, buf/buf0lru.c, buf/buf0buf.c:
