branches/zip: buf_flush_insert_into_flush_list(), buf_flush_insert_sorted_into_flush_list(): Remove unused code. Change the parameter to buf_block_t* block and assert that block->state == BUF_BLOCK_FILE_PAGE.  This is part of Issue #155. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:3868 testament3-sha1: 4984cebc16d9663a0e74365aaac68ab58b5f8e93

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2009-01-09	The InnoDB Team
+
+	* include/buf0flu.h, include/buf0flu.ic, buf/buf0flu.c:
+	Remove unused code from the functions
+	buf_flush_insert_into_flush_list() and
+	buf_flush_insert_sorted_into_flush_list().
+
+2009-01-09	The InnoDB Team
+
+	* buf/buf0flu.c: Simplify the function buf_flush_try_page().
+
 2009-01-07	The InnoDB Team
 
 	* row/row0merge.c:
