branches/zip: Some non-functional changes related to Issue #155.
buf_page_struct: Note that space and offset are also protected by
buf_pool_mutex.  They are only assigned to by
buf_block_set_file_page().  Thus, it suffices for buf_flush_batch() to
hold just buf_pool_mutex when checking these fields.

buf_flush_try_page(): Rename "locked" to "is_s_latched", per Heikki's request.

buf_flush_batch(): Move the common statement mutex_exit(block_mutex)
from all if-else if-else branches before the if block.  Remove the
redundant test (buf_pool->init_flush[flush_type] == FALSE) that was
apparently copied from buf_flush_write_complete().

buf_flush_write_block_low(): Note why it is safe not to hold buf_pool_mutex
or block_mutex.  Enumerate the assumptions in debug assertions.

--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:3873
testament3-sha1: 5fa2467878272da63194ab0c681429662a517faf

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,9 @@
 
 2009-01-09	The InnoDB Team
 
-	* buf/buf0flu.c: Simplify the function buf_flush_try_page().
+	* buf/buf0flu.c: Simplify the functions buf_flush_try_page() and
+	buf_flush_batch().  Add debug assertions and an explanation to
+	buf_flush_write_block_low().
 
 2009-01-07	The InnoDB Team
 
