branches/zip: buf_page_get_gen(): Remove the unused mode BUF_GET_NOWAIT. This was noticed while investigating Issue #160. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4030 testament3-sha1: 00098f7446cb460c01e8d22761d4ae7915e313e5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-23	The InnoDB Team
+
+	* include/buf0buf.h, buf/buf0buf.c:
+	Remove the unused mode BUF_GET_NOWAIT of buf_page_get_gen()
+
 2009-01-20	The InnoDB Team
 
 	* include/rem0rec.h, include/rem0rec.ic:
