branches/zip: In r988, the function buf_block_align() was enclosed within UNIV_DEBUG. The two remaining callers in non-debug builds, btr_search_guess_on_hash() and btr_search_validate(), were rewritten to call buf_page_hash_get().
To implement support for a resizeable buffer pool, the function
buf_block_align() had been rewritten to perform a page hash lookup in
the buffer pool. The caller was also made responsible for holding the
buffer pool mutex.

Because the page hash lookup is expensive and it has to be done while
holding the buffer pool mutex, implement buf_block_align() by pointer
arithmetics again, and make btr_search_guess_on_hash() call it. Note
that this will have to be adjusted if the interface to the resizeable
buffer pool is actually implemented.

rb://83 approved by Heikki Tuuri, to address Issue #161.

As a deviation from the approved patch, this patch also makes
btr_search_validate() (invoked by CHECK TABLE) check that
buf_pool->page_hash is consistent with buf_block_align().

--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4036
testament3-sha1: 4655b052f75d428481b8a7de79dbbf3a1b9224d3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2009-01-26	The InnoDB Team
+
+	* include/buf0buf.h, include/buf0buf.ic, buf/buf0buf.c,
+	include/mtr0log.ic, include/row0upd.ic, mtr/mtr0mtr.c,
+	btr/btr0sea.c:
+	Implement buf_block_align() with pointer arithmetics, as it is in
+	the built-in InnoDB distributed with MySQL.  Do not acquire the
+	buffer pool mutex before buf_block_align().  This removes a
+	scalability bottleneck in the adaptive hash index lookup.  In
+	CHECK TABLE, check that buf_pool->page_hash is consistent with
+	buf_block_align().
+
 2009-01-23	The InnoDB Team
 
 	* btr/btr0sea.c:
