branches/zip: get_share(), free_share(): Make table locking case sensitive. If lower_case_table_names=1, MySQL will pass the table names in lower case. Thus, we can use a binary comparison (strcmp) in the hash table.
rb://87 approved by Heikki Tuuri, to address Bug #41676 and Issue #167.

--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4150
testament3-sha1: b153f192733d1243bab0df2573fc09d0e8a06094

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-10	The InnoDB Team
 
+	* handler/ha_innodb.h, handler/ha_innodb.cc:
+	Fix Bug#41676 Table names are case insensitive in locking
+
+2009-02-10	The InnoDB Team
+
 	* ut/ut0mem.c:
 	Map ut_malloc_low(), ut_realloc(), and ut_free() directly to
 	malloc(), realloc(), and free() when innodb_use_sys_malloc is set.
