branches/zip: When innodb_use_sys_malloc is set, ignore innodb_additional_mem_pool_size, because nothing will be allocated from mem_comm_pool.
mem_pool_create(): Remove the assertion about size.  The function will
work with any size.  However, an assertion would fail in ut_malloc_low()
when size==0.

mem_init(): When srv_use_sys_malloc is set, pass size=1 to mem_pool_create().

mem0mem.c: Add #include "srv0srv.h" that is needed by mem0dbg.c.

--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4152
testament3-sha1: 84024a64914c353907c1c91739cdaa3a666fa704

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,13 @@
 
 2009-02-10	The InnoDB Team
 
+	* mem/mem0pool.c, mem/mem0dbg.c, mem/mem0mem.c:
+	When innodb_use_sys_malloc is set, ignore
+	innodb_additional_mem_pool_size, because nothing will
+	be allocated from mem_comm_pool.
+
+2009-02-10	The InnoDB Team
+
 	* ut/ut0mem.c:
 	Map ut_malloc_low(), ut_realloc(), and ut_free() directly to
 	malloc(), realloc(), and free() when innodb_use_sys_malloc is set.
