branches/zip: Make innodb_thread_concurrency=0 the default. The old default was 8.
--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4163
testament3-sha1: 386f1565de4e619a149f5110986a450ef1ce329f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-02-11	The InnoDB Team
+
+	* handler/ha_innodb.cc:
+	Make innodb_thread_concurrency=0 the default.  The old default
+	value was 8.  A non-zero setting may be useful when InnoDB is
+	showing severe scalability problems under multiple concurrent
+	connections.
+
 2009-02-10	The InnoDB Team
 
 	* handler/ha_innodb.h, handler/ha_innodb.cc:
