branches/zip: Make innodb_use_sys_malloc=ON the default. Replace srv_use_sys_malloc with UNIV_LIKELY(srv_use_sys_malloc) to improve branch prediction in the default case.
Approved by Ken over the IM.
--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4265
testament3-sha1: 618a0f35904ab9fa0ebc4e3225c7913975b03fab

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-20	The InnoDB Team
 
+	* handler/ha_innodb.cc:
+	Make innodb_use_sys_malloc=ON the default.
+
+2009-02-20	The InnoDB Team
+
 	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
 	mysql-test/innodb-autoinc.test:
 	Fix Bug#42400 InnoDB autoinc code can't handle floating-point columns
