branches/zip: When freeing an uncompressed BLOB page, tolerate garbage in FIL_PAGE_TYPE.  (Bug #43043, Issue #182)
btr_check_blob_fil_page_type(): New function.

btr_free_externally_stored_field(), btr_copy_blob_prefix():
Call btr_check_blob_fil_page_type() to check FIL_PAGE_TYPE.
--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4269
testament3-sha1: fbb7ae49c68994025fdcff002d3b1dcdee6e6f41

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-02-23	The InnoDB Team
+	* btr/btr0cur.c:
+	Fix Bug#43043 Crash on BLOB delete operation
+	When freeing an uncomrpressed BLOB page, tolerate an invalid value
+	in FIL_PAGE_TYPE.  Old versions of MySQL did not initialize the
+	page type on BLOB pages.
+
 2009-02-20	The InnoDB Team
 
 	* handler/ha_innodb.cc:
