Add support for Atomic instructions for Windows Enables Google patch support on Windows --BZR-- revision-id: mikael@mysql.com-20090306182538-2lqaqycek4xvhpp2 property-branch-nick: mysql-5.1-perf-windows testament3-sha1: 235f347705278d5658e071654c58fb14bf271f4f

--- a/win/README
+++ b/win/README
@@ -58,6 +58,7 @@ The options right now are:
     WITH_EXAMPLE_STORAGE_ENGINE
     WITH_FEDERATED_STORAGE_ENGINE
     __NT__                               Enable named pipe support
+    WITHOUT_ATOMICS                      Do not use atomic instructions
     MYSQL_SERVER_SUFFIX=<suffix>         Server suffix, default none
     COMPILATION_COMMENT=<comment>        Server comment, default "Source distribution"
     MYSQL_TCP_PORT=<port>                Server port, default 3306
