branches/zip: Add const qualifiers or in/out comments to some function parameters in log0log. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4491 testament3-sha1: 75cb94b9d3a44d32e4ed83e13dbd254efe6cdd8c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-03-20	The InnoDB Team
 
+	* include/log0log.h, include/log0log.ic, log/log0log.c:
+	Add in/out comments or const qualifiers to some function
+	parameters as appropriate.
+
+2009-03-20	The InnoDB Team
+
 	* dict/dict0boot.c, dict/dict0dict.c, fsp/fsp0fsp.c,
 	include/dict0dict.h, include/srv0srv.h, srv/srv0srv.c,
 	page/page0page.c:
