branches/zip: page_validate(): Always report the space id and the name of the index.
In Hot Backup, do not invoke comparison functions, as MySQL collations
will be unavailable.
--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4492
testament3-sha1: 00c3ceb74be6de21725b1dfc5950e7d40c8eba62

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-03-20	The InnoDB Team
 
+	* page/page0page.c:
+	In page_validate(), always report the space id, page number and
+	the name of the index when corruption is noticed.
+
+2009-03-20	The InnoDB Team
+
 	* include/log0log.h, include/log0log.ic, log/log0log.c:
 	Add in/out comments or const qualifiers to some function
 	parameters as appropriate.
