branches/zip: fil0fil.c: Refer to fil_system directly, not via local vars. This eliminates some "unused variable" warnings when building InnoDB Hot Backup in such a way that all mutex operations are no-ops. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4494 testament3-sha1: 198a5111ddd7e31c108d15f686b1a2846359f8fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-20	The InnoDB Team
 
+	* fil/fil0fil.c:
+	Refer to fil_system directly, not via local variables.
+
+2009-03-20	The InnoDB Team
+
 	* page/page0page.c:
 	In page_validate(), always report the space id, page number and
 	the name of the index when corruption is noticed.
