branches/zip: innobase_get_at_most_n_mbchars(): Declare in ha_prototypes.h. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4495 testament3-sha1: ae6c1ab1c8d2e99915d38ae6098b78c7f1b21ce7

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-20	The InnoDB Team
 
+	* data/data0type.c, handler/ha_innodb.cc, include/ha_prototypes.h:
+	Declare innobase_get_at_most_n_mbchars() in ha_prototypes.h.
+
+2009-03-20	The InnoDB Team
+
 	* fil/fil0fil.c:
 	Refer to fil_system directly, not via local variables.
 
