branches/zip: recv_recover_page(): Remove compile-time constant parameters. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4496 testament3-sha1: e816ea02d02125ab94ba1a0cf1782f601fb26c81

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-20	The InnoDB Team
 
+	* buf/buf0buf.c, include/log0recv.h, log/log0recv.c:
+	Remove the compile-time constant parameters of recv_recover_page().
+
+2009-03-20	The InnoDB Team
+
 	* data/data0type.c, handler/ha_innodb.cc, include/ha_prototypes.h:
 	Declare innobase_get_at_most_n_mbchars() in ha_prototypes.h.
 
