branches/zip: recv_sys_init(): Remove a compile-time constant parameter. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4497 testament3-sha1: 7048a24d84fa8cbcadfac1e4c17d2bd7dbdd3db2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2009-03-20	The InnoDB Team
 
 	* buf/buf0buf.c, include/log0recv.h, log/log0recv.c:
-	Remove the compile-time constant parameters of recv_recover_page().
+	Remove the compile-time constant parameters of
+	recv_recover_page() and recv_sys_init().
 
 2009-03-20	The InnoDB Team
 
