branches/zip: recv_scan_log_recs(): Remove a compile-time constant parameter. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4499 testament3-sha1: 4f464fca5016876aab571c3e05d2e0081ea9d398

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* buf/buf0buf.c, include/log0recv.h, log/log0recv.c:
 	Remove the compile-time constant parameters of
-	recv_recover_page() and recv_sys_init().
+	recv_recover_page(), recv_scan_log_recs(), and recv_sys_init().
 
 2009-03-20	The InnoDB Team
 
