branches/zip: fil_init(): Add the parameter hash_size. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4500 testament3-sha1: c734a89b96c14b2e8dac196e53a2de074b6ddd9d

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,11 @@
 
 2009-03-20	The InnoDB Team
 
+	* fil/fil0fil.h, fil/fil0fil.c, srv/srv0start.c:
+	Add the parameter hash_size to fil_init().
+
+2009-03-20	The InnoDB Team
+
 	* fil/fil0fil.c:
 	Refer to fil_system directly, not via local variables.
 
