branches/zip: Remove the bogus failure reported in Issue #219. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4657 testament3-sha1: 071825e375d4124e7a21a390c8914635cfb81d26

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-06	The InnoDB Team
+
+	* sync/sync0rw.c:
+	Avoid a bogus failure in UNIV_SYNC_DEBUG diagnostics.
+
 2009-04-02	The InnoDB Team
 
 	* handler/ha_innodb.cc, include/srv0srv.h, srv/srv0srv.c:
