--- a/ChangeLog
+++ b/ChangeLog
@@ -26,9 +26,8 @@
 
 	* btr/btr0btr.c, dict/dict0dict.c, ibuf/ibuf0ibuf.c,
 	include/data0data.h, include/data0data.ic, include/data0type.h,
-	include/data0type.ic, include/dict0dict.h,
-	include/dict0dict.ic, include/rem0rec.ic,
-	mysql-test/innodb.result, mysql-test/innodb.test,
+	include/data0type.ic, include/dict0dict.h, include/dict0dict.ic,
+	include/rem0rec.ic, mysql-test/innodb.result, mysql-test/innodb.test,
 	pars/pars0pars.c, rem/rem0rec.c, row/row0upd.c:
 	Fix Bug#44032 In ROW_FORMAT=REDUNDANT, update UTF-8 CHAR
 	to/from NULL is not in-place
@@ -43,7 +42,7 @@
 
 	* handler/ha_innodb.cc:
 	Make the parameter innodb_change_buffering settable by the
-	configuration file or mysqld command line options.  Before this
+	configuration file or mysqld command line options. Before this
 	fix, the initial value specified for this parameter was ignored.
 
 2009-04-06	The InnoDB Team
