branches/zip: univ.i: Define REFMAN as the base URL of the MySQL Reference Manual and use it in every string. This fixes Issue #221. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4728 testament3-sha1: eadfb6d24797560767c27b30b18985515ca0e04a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-04-16	The InnoDB Team
 
+	* univ.i:
+	Define REFMAN as the base URL of the MySQL Reference Manual and
+	use the macro in all diagnostic output.
+
+2009-04-16	The InnoDB Team
+
 	* CMakeLists.txt, include/os0sync.h, include/sync0sync.h,
 	include/sync0sync.ic, include/univ.i, srv/srv0start.c,
 	sync/sync0sync.c:
