--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-04-23	The InnoDB Team
+
+	* trx0types.h:
+	Define the logical type names trx_id_t, roll_ptr_t, and undo_no_t
+	and use them in place of dulint everywhere.
+
 2009-04-18	The InnoDB Team
 
 	* handler/ha_innodb.cc, include/pars0pars.h:
