branches/zip: row_scan_and_check_index(): Improve the diagnostics, by reporting errors from row_search_for_mysql() in the error log. The errors will still be ignored by CHECK TABLE. This is somewhat related to Issue #211. --BZR-- revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4896 testament3-sha1: 7340359421d6a24d783e327bb7cc1cde9b78b250

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-04-23	The InnoDB Team
 
+	* row/row0mysql.c:
+	When scanning indexes, report in the error log any error codes
+	returned by the search function.  These error codes will still be
+	ignored in CHECK TABLE.
+
+2009-04-23	The InnoDB Team
+
 	* include/trx0types.h:
 	Define the logical type names trx_id_t, roll_ptr_t, and undo_no_t
 	and use them in place of dulint everywhere.
